--- a/index.css
+++ b/index.css
@@ -8,6 +8,10 @@ body {
   #weatherResults {
     display: flex;
     flex-wrap: wrap;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 20px;
+    background-color: rgb(111, 177, 247);
+    border:3px solid green;
    
   }
   
@@ -35,6 +39,17 @@ main {
     font-family: Arial, Helvetica, sans-serif;
     
     
+  }
+
+  h1{
+    text-align: center;
+   
+    font-size: larger;
+
+    font-family:cursive ;
+
+    font-size: 30px;
+    color: rgb(11, 11, 116);
   }
 
 
