--- a/index.css
+++ b/index.css
@@ -1,6 +1,7 @@
 body {
     font-family: Arial, sans-serif;
-    min-height: 100vh 
+    min-height: 100vh ;
+    background-color: rgb(243, 244, 232);
   }
   
   
